--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   image_picker: ^0.8.6+2
+  path_provider: ^2.0.12
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
